test: add unit test suites for OnlineSessionService, ChatService, and TutorRepository, and include project build configuration